Bug 460501 - Window increases width when moving the cursor vertically during drag-resize after making the window as small as possible
Summary: Window increases width when moving the cursor vertically during drag-resize a...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.26.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-10-15 19:34 UTC by Matej Starc
Modified: 2022-10-19 00:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.1
Sentry Crash Report:


Attachments
bug showcase video (1.19 MB, video/mp4)
2022-10-15 19:34 UTC, Matej Starc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matej Starc 2022-10-15 19:34:02 UTC
Created attachment 152858 [details]
bug showcase video

SUMMARY
When resizing the window to a small width and moving the cursor up and down the app window's width "magically" increases.


STEPS TO REPRODUCE
1. Open an app (firefox, discord, neochat, konsole, dolphin, system settings is what i've tested so far)
2. Drag the top right corner to the top left corner so it has enough height to display something
3. Move your cursor/mouse up and down

OBSERVED RESULT
App's window increases width when not resizing width. 

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.26.0
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.6
Kernel Version: 6.0.1-zen2-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × Intel® Core™ i7-8700 CPU @ 3.20GHz
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 480 Graphics
Comment 1 Nate Graham 2022-10-16 01:20:38 UTC
How bizarre, can reproduce. Intel iGPU, Wayland, git master everything.
Comment 2 Vlad Zahorodnii 2022-10-17 07:49:10 UTC
I can't reproduce it
Comment 3 Vlad Zahorodnii 2022-10-17 07:50:27 UTC
Hmm, nvm. I can reproduce it
Comment 4 Bug Janitor Service 2022-10-17 07:56:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3060
Comment 5 Vlad Zahorodnii 2022-10-17 08:19:15 UTC
Git commit 207e78386af89c17650d0a85a20fadfbb02e48b3 by Vlad Zahorodnii.
Committed on 17/10/2022 at 08:07.
Pushed by vladz into branch 'master'.

Fix resizing by dragging top-right window corner

The top-right corner case was overlooked when switching from QRect to
QRectF, which results in the window having wrong size.

M  +1    -1    src/window.cpp

https://invent.kde.org/plasma/kwin/commit/207e78386af89c17650d0a85a20fadfbb02e48b3
Comment 6 Vlad Zahorodnii 2022-10-17 08:27:57 UTC
Git commit 44d3e43652ee1922d0d9c390cfefcc02518c8b48 by Vlad Zahorodnii.
Committed on 17/10/2022 at 08:27.
Pushed by vladz into branch 'Plasma/5.26'.

Fix resizing by dragging top-right window corner

The top-right corner case was overlooked when switching from QRect to
QRectF, which results in the window having wrong size.


(cherry picked from commit 207e78386af89c17650d0a85a20fadfbb02e48b3)

M  +1    -1    src/window.cpp

https://invent.kde.org/plasma/kwin/commit/44d3e43652ee1922d0d9c390cfefcc02518c8b48
Comment 7 Matej Starc 2022-10-17 13:33:33 UTC
(In reply to Vlad Zahorodnii from comment #6)
> Git commit 44d3e43652ee1922d0d9c390cfefcc02518c8b48 by Vlad Zahorodnii.
> Committed on 17/10/2022 at 08:27.
> Pushed by vladz into branch 'Plasma/5.26'.
> 
> Fix resizing by dragging top-right window corner
> 
> The top-right corner case was overlooked when switching from QRect to
> QRectF, which results in the window having wrong size.
> 
> 
> (cherry picked from commit 207e78386af89c17650d0a85a20fadfbb02e48b3)
> 
> M  +1    -1    src/window.cpp
> 
> https://invent.kde.org/plasma/kwin/commit/
> 44d3e43652ee1922d0d9c390cfefcc02518c8b48

Thank you for fixing it. :D