Fix resizing by dragging top-right window corner

The top-right corner case was overlooked when switching from QRect to
QRectF, which results in the window having wrong size.

BUG: 460501


(cherry picked from commit 207e78386af89c17650d0a85a20fadfbb02e48b3)